--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -235,7 +235,7 @@ spec:
       {{- end }}
       {{- with .Values.repoServer.nodeSelector }}
       nodeSelector:
-        {{- toYaml .Values.repoServer.nodeSelector | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.repoServer.tolerations }}
       tolerations:
