Cleanup secret section
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.configs.secret.createSecret }}
+{{- if .Values.configs.secret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,34 +12,8 @@ metadata:
     {{- end }}
   {{- end }}
 type: Opaque
-{{- if or .Values.configs.secret.githubSecret (or .Values.configs.secret.gitlabSecret .Values.configs.secret.bitbucketUUID .Values.configs.secret.bitbucketServerSecret .Values.configs.secret.gogsSecret .Values.configs.secret.argocdServerAdminPassword .Values.configs.secret.argocdServerTlsConfig .Values.configs.secret.extra) }}
-# Setting a blank data again will wipe admin password/key/cert
+{{- with include "argo-cd.config.secret" . }}
 data:
-  {{- with .Values.configs.secret.githubSecret }}
-  webhook.github.secret: {{ . | b64enc }}
-  {{- end }}
-  {{- with .Values.configs.secret.gitlabSecret }}
-  webhook.gitlab.secret: {{ . | b64enc }}
-  {{- end }}
-  {{- with .Values.configs.secret.bitbucketServerSecret }}
-  webhook.bitbucketserver.secret: {{ . | b64enc }}
-  {{- end }}
-  {{- with .Values.configs.secret.bitbucketUUID }}
-  webhook.bitbucket.uuid: {{ . | b64enc }}
-  {{- end }}
-  {{- with .Values.configs.secret.gogsSecret }}
-  webhook.gogs.secret: {{ . | b64enc }}
-  {{- end }}
-  {{- with .Values.configs.secret.argocdServerTlsConfig }}
-  tls.key: {{ .key | b64enc }}
-  tls.crt: {{ .crt | b64enc }}
-  {{- end }}
-  {{- if .Values.configs.secret.argocdServerAdminPassword }}
-  admin.password: {{ .Values.configs.secret.argocdServerAdminPassword | b64enc }}
-  admin.passwordMtime: {{ default (dateInZone "2006-01-02T15:04:05Z" (now) "UTC") .Values.configs.secret.argocdServerAdminPasswordMtime | b64enc }}
-  {{- end }}
-  {{- range $key, $value := .Values.configs.secret.extra }}
-  {{ $key }}: {{ $value | b64enc }}
-  {{- end }}
+  {{- trim . | nindent 2 }}
 {{- end }}
 {{- end }}
