--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
@@ -1,19 +1,19 @@
-{{- if and .Values.notifications.enabled .Values.notifications.secret.create }}
+{{- if and .Values.notifications.enabled .Values.configs.notifications.create }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: argocd-notifications-secret
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.name "name" .Values.notifications.name) | nindent 4 }}
-  {{- with .Values.notifications.secret.annotations }}
+  {{- with .Values.configs.notifications.annotations }}
   annotations:
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
 type: Opaque
+{{- with .Values.configs.notifications.secret }}
 stringData:
-  {{- with .Values.notifications.secret.items }}
-    {{- toYaml . | nindent 2 }}
-  {{- end }}
+  {{- toYaml . | nindent 2 }}
+{{- end }}
 {{- end }}
