Refactor notifications manifests
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -22,5 +22,7 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
+    - "[Fixed]: Automount tokens for notification controller"
     - "[Changed]: Configuration sections have been refactored and unified"
+    - "[Changed]: Aligned deployments for notification and applicationset controller with upstream"
     - "[Removed]: Deprecated configuration options"
