--- a/charts/argo-cd/templates/argocd-notifications/bots/slack/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/bots/slack/rolebinding.yaml
@@ -2,12 +2,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "argo-cd.notifications.fullname" . }}-bot
+  name: {{ include "argo-cd.notifications.fullname" . }}-slack-bot
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "argo-cd.notifications.fullname" . }}-bot
+  name: {{ include "argo-cd.notifications.fullname" . }}-slack-bot
 subjects:
 - kind: ServiceAccount
-  name: {{ template "argo-cd.notificationsBotsSlackServiceAccountName" . }}
+  name: {{ include "argo-cd.notifications.bots.slack.serviceAccountName" . }}
 {{ end }}
