--- a/charts/argo-cd/templates/argocd-notifications/bots/slack/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/bots/slack/serviceaccount.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 automountServiceAccountToken: {{ .Values.notifications.bots.slack.serviceAccount.automountServiceAccountToken }}
 metadata:
-  name: {{ template "argo-cd.notificationsBotsSlackServiceAccountName" . }}
-{{- if .Values.notifications.bots.slack.serviceAccount.annotations }}
+  name: {{ include "argo-cd.notifications.bots.slack.serviceAccountName" . }}
+  {{- with .Values.notifications.bots.slack.serviceAccount.annotations }}
   annotations:
-  {{- range $key, $value := .Values.notifications.bots.slack.serviceAccount.annotations }}
+    {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
+    {{- end }}
   {{- end }}
-{{- end }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.bots.slack.name "name" .Values.notifications.bots.slack.name) | nindent 4 }}
 {{- end }}
