--- a/charts/argo-cd/templates/argocd-notifications/servicemonitor.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/servicemonitor.yaml
@@ -3,26 +3,31 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ template "argo-cd.notifications.fullname" . }}
-  {{- if .Values.notifications.metrics.serviceMonitor.namespace }}
-  namespace: {{ .Values.notifications.metrics.serviceMonitor.namespace }}
+  {{- with .Values.notifications.metrics.serviceMonitor.namespace }}
+  namespace: {{ . }}
   {{- end }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.name "name" .Values.notifications.name) | nindent 4 }}
     {{- with .Values.notifications.metrics.serviceMonitor.selector }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-    {{- if .Values.notifications.metrics.serviceMonitor.additionalLabels }}
-      {{- toYaml .Values.notifications.metrics.serviceMonitor.additionalLabels | nindent 4 }}
+    {{- with .Values.notifications.metrics.serviceMonitor.additionalLabels }}
+      {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
   endpoints:
     - port: {{ .Values.notifications.metrics.service.portName }}
       path: /metrics
-      {{- if .Values.notifications.metrics.serviceMonitor.interval }}
-      interval: {{ .Values.notifications.metrics.serviceMonitor.interval }}
+      {{- with .Values.notifications.metrics.serviceMonitor.interval }}
+      interval: {{ . }}
       {{- end }}
-      {{- if .Values.notifications.metrics.serviceMonitor.scrapeTimeout }}
-      scrapeTimeout: {{ .Values.notifications.metrics.serviceMonitor.scrapeTimeout }}
+      {{- with .Values.notifications.metrics.serviceMonitor.relabelings }}
+      relabelings:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.notifications.metrics.serviceMonitor.metricRelabelings }}
+      metricRelabelings:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.notifications.metrics.serviceMonitor.scheme }}
       scheme: {{ . }}
