feat: override apiVersion of cloud.google.com resources

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -20,3 +20,4 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - "[Fixed]: Clarified documentation around CRD upgrades"
+    - "[Added]: Override apiVersion of cloud.google.com resources such as BackendConfig"
