--- a/charts/argo-cd/templates/argocd-server/backendconfig.yaml
+++ b/charts/argo-cd/templates/argocd-server/backendconfig.yaml
@@ -1,5 +1,11 @@
 {{- if .Values.server.GKEbackendConfig.enabled }}
-apiVersion: cloud.google.com/v1beta1
+{{- if .Values.apiVersionOverrides.cloudgooglecom -}}
+apiVersion: {{ .Values.apiVersionOverrides.cloudgooglecom }}
+{{- else if .Capabilities.APIVersions.Has "cloud.google.com/v1beta1" }}
+apiVersion: "cloud.google.com/v1beta1"
+{{- else }}
+apiVersion: "cloud.google.com/v1"
+{{- end }}
 kind: BackendConfig
 metadata:
   name: {{ template "argo-cd.server.fullname" . }}
